# RTSoft-TestAssignment

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
doxygen/html/: CMakeLists_8txt.html  README_8md.html  annotated.html  classMapMatrix-members.html  classMapMatrix.html  classes.html  copy_2CMakeLists_8txt.html  copy_2README_8md.html  copy_2include_2coroutine_8h.html  copy_2include_2coroutine_8h__dep__incl.dot  copy_2include_2coroutine_8h__incl.dot  copy_2include_2coroutine_8h_source.html  copy_2include_2field_8h.html  copy_2include_2field_8h__incl.dot  copy_2include_2field_8h_source.html  copy_2src_2CMakeLists_8txt.html  copy_2src_2field_8cpp.html  copy_2src_2field_8cpp__incl.dot  copy_2src_2main_8cpp.html  copy_2src_2main_8cpp__incl.dot  copy_2test_2CMakeLists_8txt.html  copy_2test_2src_2test__field_8cpp.html  copy_2test_2src_2test__field_8cpp__incl.dot  copy_2test_2src_2test__init_8cpp.html  copy_2test_2src_2test__init_8cpp__incl.dot  copy_2test_2tests_2test0_8txt.html  copy_2test_2tests_2test1_8txt.html  copy_2test_2tests_2test2_8txt.html  coroutine_8h.html  coroutine_8h__dep__incl.dot  coroutine_8h_source.html  dir_000000_000002.html  dir_000003_000002.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_586fcb8632ffc6f9db7457d60fe39891.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+58 more)
doxygen/html/search/: all_0.js  (+35 more)
include/: coroutine.h  field.h
src/: CMakeLists.txt  field.cpp  main.cpp
test/: CMakeLists.txt
test/src/: test_field.cpp  test_init.cpp
test/tests/: test0.txt  test1.txt  test2.txt
